...
  Created by Sebastian Kuhlen on 28.05.16.
  Copyright © 2016 RWTH Aachen. All rights reserved.
*/

"apple_ban" = "This experiment is no longer available.";
"app_name" = "phyphox";
"actions" = "Actions";
"action_settings" = "Settings";
"title_activity_experiment" = "phyphox";
"newExperiment" = "Add experiment";
"newExperimentSimple" = "Add simple experiment";
"newExperimentPhyphoxInfo" = "Visit phyphox.org to create more advanced experiments including data analysis and share them with colleagues, students and friends.";
"newExperimentInputTitle" = "Title";
...
"sensorNotAvailableWarningText1" = "The sensor";
"sensorNotAvailableWarningText2" = "is not available. Usually this means, that your device simply does not have this type of sensor.";
"sensorNotAvailableWarningMoreInfo" = "More info";
"sensorNotAvailableWarningMoreInfoURL" = "http://phyphox.org/faq/#faqMissingSensor";
"appleBanWarningMoreInfo" = "More info";
"appleBanWarningMoreInfoURL" = "http://phyphox.org/faq/#faqAppleBan";
"ok" = "OK";
"accept" = "Accept";
"tryagain" = "Try again";
"doContinue" = "Continue";
"close" = "Close";
"next" = "Next";
"cancel" = "Cancel";
"unknown" = "unknown";
"rename" = "Rename";
"delete" = "Delete";
"select" = "--select--";
"chooseOption" = "Choose an option";
"confirmDelete" = "Do you want to delete this experiment from your collection?";
...
"stop" = "Stop";
"start" = "Start";
"clear_data" = "Clear data";
"clear_data_question" = "Clear recorded data?";
"clear_data_question_select" = "Clear recorded data and the following optional items?";
"clear" = "Clear";
"leave_experiment" = "Leave experiment";
"leave_experiment_question" = "Leave this experiment and discard recorded data?";
"leave" = "Leave";
"timed_stop" = "Stop timed run";
"timed_start" = "Start timed run";
"loadingTitle" = "Loading";
"loadingText" = "Loading experiment…";
"loadingBluetoothConnectionText" = "Connecting to Bluetooth device…";
"timedRunDialogTitle" = "Timed Run";
...
"share_subject" = "Screenshot from phyphox";
"share_pick_share" = "Pick a share method";
"switch_to_calibrated_magnetometer" = "Switch to calibrated magnetometer";
"switch_to_raw_magnetometer" = "Switch to raw magnetometer";
"switch_to_calibrated_gyroscope" = "Switch to calibrated gyroscope";
"switch_to_raw_gyroscope" = "Switch to raw gyroscope";
"enableRemoteServer" = "Enable remote access";
"disableRemoteServer" = "Disable remote access";
"remoteServerWarning" = "You are about to enable remote access to the acquired data. You should only do so on a trusted network! Also note, that direct access between devices may not be possible on many corporate or university networks.\n\nFor best security and performance you should connect to this device via a tethering option (mobile hotspot).\n\nAfter pressing ok, you can access your measureme
"remoteServerWarningTitle" = "Security warning!";
"remoteServerNoNetwork" = "You need to set up a Wifi connection to the remote device first. Please enable Wifi or create a mobile hotspot.";
"remoteServerActive" = "Remote access enabled. Access this experiment from the following URL:";
"remoteServerPortInUseTitle" = "Could not enable remote access";
"remoteServerPortInUse" = "Remote access could not be enabled because the port is already in use by another app on this device. Stop the app that is using the port or set a different port in the phyphox settings.";
...
"save_state_success" = "State has been saved to your collection.";
"timedRun" = "Timed run";
"pick_exportSets" = "Pick the data sets to export.";
"pick_exportFormat" = "Choose the data format.";
"noDrawableData" = "No drawable data.";
"categoryNewExperiment" = "Simple custom experiments";
"categoryRawSensor" = "Raw Sensors";
"categoryPhyphoxOrg" = "Contribute to phyphox";
"categoryPhyphoxOrgHint" = "There are new options to support phyphox at the bottom of the list.";
"experimentinfo_hint" = "Check experiment info to learn how to use this experiment.";
"start_hint" = "Touch the triangle to start the experiment.";
"help" = "Help and info";
"experimentsPhyphoxOrg" = "Experiment ideas and instructions";
...
"remotePhyphoxOrg" = "Remote control help";
"remotePhyphoxOrgURL" = "http://phyphox.org/remote-control";
"AudioRateMissmatch" = "Error: Sampling rate mismatch. Please disable any apps or services (like AirPlay) which force a different audio sampling rate.";
"deviceInfo" = "Device info";
"copyToClipboard" = "Copy to clipboard";
"deviceInfoCopied" = "The device info has been copied to your clipboard.";
"graph_tools_pan_and_zoom" = "Pan and zoom";
"graph_tools_pick" = "Pick data";
"graph_tools_more" = "More tools";
"graph_tools_system_time" = "Convert to system time";
"graph_tools_reset" = "Reset zoom";
"graph_tools_follow" = "Follow new data";
"graph_tools_linear_fit" = "Linear fit";
"graph_tools_export" = "Export this dataset";
"graph_tools_log_x" = "Logarithmic x axis";
"graph_tools_log_y" = "Logarithmic y axis";
"graph_point_label" = "Point";
...
"remoteDepthGUIWarning" = "Previewing and controlling the LiDAR/ToF sensor on the remote interface is not supported.";
"remoteCameraWarning" = "Previewing and controlling the camera sensor on the remote interface is not supported.";
"applyZoomQuestionTitle" = "Keep this view?";
"applyZoomQuestion" = "You zoomed in. Should the graph keep showing this section when you return?";
"applyZoomRange" = "%1$@: %2$@ to %3$@";
"applyZoomActionReset" = "Reset zoom";
"applyZoomActionKeep" = "Keep this section";
"applyZoomActionFollow" = "Keep and follow new data";
"applyZoomMoreOptions" = "More options…";
"applyZoomAlsoApply" = "Also apply to other graphs with…";
"applyZoomTargetThis" = "this graph only";
"applyZoomTargetSameData" = "the same data";
"applyZoomTargetSameUnit" = "the same unit (%@)";
"applyZoomTargetSameAxis" = "any %@ axis";
"newExperimentBluetooth" = "Add experiment for Bluetooth device";
"newExperimentBluetoothErrorTitle" = "Bluetooth scan error";
...
